[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Editor/Cursor.tres" type="StyleBox" id=1]
[ext_resource path="res://src/Editor/TileSet.gd" type="Script" id=2]
[ext_resource path="res://src/Editor/EditorTheme.tres" type="Theme" id=3]
[ext_resource path="res://src/UI/StyleBox/SteelRoundInset.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/Editor/CollisionOneWay.png" type="Texture2D" id=5]
[ext_resource path="res://assets/Editor/FlipH.png" type="Texture2D" id=6]
[ext_resource path="res://assets/Editor/FlipV.png" type="Texture2D" id=7]
[ext_resource path="res://assets/Editor/RotateCC.png" type="Texture2D" id=8]
[ext_resource path="res://assets/Editor/RotateC.png" type="Texture2D" id=9]

[node name="TileSet" type="MarginContainer"]
offset_right = 384.0
offset_bottom = 288.0
pivot_offset = Vector2( -408, -64 )
mouse_filter = 1
theme = ExtResource( 3 )
script = ExtResource( 2 )
normal_buttons = NodePath("VBox/Margin/Tab/Normal/Scroll/VBox")
collision_buttons = NodePath("VBox/Margin/Tab/Collision/Scroll/Tiles")
normal_cursor = NodePath("VBox/Margin/Tab/Normal/Scroll/Control/Cursor")
brushes = NodePath("VBox/Margin/Tab/Collision/HBox/Scroll2/Brushes")

[node name="VBox" type="VBoxContainer" parent="."]
offset_right = 384.0
offset_bottom = 288.0

[node name="Label" type="Label" parent="VBox"]
offset_right = 384.0
offset_bottom = 8.0
custom_minimum_size = Vector2( 0, 8 )
size_flags_vertical = 0
theme_override_colors/font_color = Color( 0.878431, 0.784314, 0.345098, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
text = "TileSet"
align = 1

[node name="Margin" type="MarginContainer" parent="VBox"]
offset_top = 12.0
offset_right = 384.0
offset_bottom = 288.0
size_flags_vertical = 3

[node name="Tab" type="TabContainer" parent="VBox/Margin"]
offset_right = 384.0
offset_bottom = 276.0
mouse_filter = 1

[node name="Normal" type="VBoxContainer" parent="VBox/Margin/Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 30.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Scroll" type="ScrollContainer" parent="VBox/Margin/Tab/Normal"]
offset_right = 352.0
offset_bottom = 200.0
mouse_filter = 1
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="VBox/Margin/Tab/Normal/Scroll"]
theme_override_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBox/Margin/Tab/Normal/Scroll"]
offset_right = 352.0
offset_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cursor" type="Panel" parent="VBox/Margin/Tab/Normal/Scroll/Control"]
mouse_filter = 2
theme_override_styles/panel = ExtResource( 1 )

[node name="Spacer" type="Control" parent="VBox/Margin/Tab/Normal"]
offset_top = 204.0
offset_right = 352.0
offset_bottom = 230.0
custom_minimum_size = Vector2( 0, 26 )

[node name="Collision" type="VBoxContainer" parent="VBox/Margin/Tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 30.0
offset_right = -16.0
offset_bottom = -16.0

[node name="HBox" type="HBoxContainer" parent="VBox/Margin/Tab/Collision"]
offset_right = 352.0
offset_bottom = 32.0

[node name="FlipH" type="Button" parent="VBox/Margin/Tab/Collision/HBox"]
offset_right = 32.0
offset_bottom = 32.0
toggle_mode = true
icon = ExtResource( 6 )

[node name="FlipV" type="Button" parent="VBox/Margin/Tab/Collision/HBox"]
offset_left = 36.0
offset_right = 68.0
offset_bottom = 32.0
toggle_mode = true
icon = ExtResource( 7 )

[node name="RotateC" type="Button" parent="VBox/Margin/Tab/Collision/HBox"]
offset_left = 72.0
offset_right = 104.0
offset_bottom = 32.0
toggle_mode = true
icon = ExtResource( 9 )

[node name="RotateCC" type="Button" parent="VBox/Margin/Tab/Collision/HBox"]
offset_left = 108.0
offset_right = 140.0
offset_bottom = 32.0
toggle_mode = true
icon = ExtResource( 8 )

[node name="OneWay" type="Button" parent="VBox/Margin/Tab/Collision/HBox"]
offset_left = 144.0
offset_right = 176.0
offset_bottom = 32.0
toggle_mode = true
icon = ExtResource( 5 )

[node name="Scroll2" type="ScrollContainer" parent="VBox/Margin/Tab/Collision/HBox"]
offset_left = 180.0
offset_right = 352.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 0, 24 )
mouse_filter = 2
size_flags_horizontal = 3
theme_override_styles/bg = ExtResource( 4 )
scroll_vertical_enabled = false

[node name="Brushes" type="HBoxContainer" parent="VBox/Margin/Tab/Collision/HBox/Scroll2"]
offset_left = 8.0
offset_top = 8.0
offset_right = 164.0
offset_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="VBox/Margin/Tab/Collision"]
offset_top = 36.0
offset_right = 352.0
offset_bottom = 200.0
mouse_filter = 1
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="VBoxContainer" parent="VBox/Margin/Tab/Collision/Scroll"]
theme_override_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBox/Margin/Tab/Collision/Scroll"]
offset_right = 352.0
offset_bottom = 164.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cursor" type="Panel" parent="VBox/Margin/Tab/Collision/Scroll/Control"]
mouse_filter = 2
theme_override_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="VBox/Margin/Tab/Collision"]
offset_top = 204.0
offset_right = 352.0
offset_bottom = 230.0
custom_minimum_size = Vector2( 0, 26 )

[node name="Margin" type="MarginContainer" parent="VBox/Margin"]
offset_right = 384.0
offset_bottom = 276.0
mouse_filter = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="VBox/Margin/Margin"]
offset_left = 8.0
offset_top = 238.0
offset_right = 376.0
offset_bottom = 268.0
size_flags_vertical = 8
alignment = 2

[node name="Save" type="Button" parent="VBox/Margin/Margin/HBox"]
offset_left = 143.0
offset_right = 205.0
offset_bottom = 30.0
text = "Save As"

[node name="Load" type="Button" parent="VBox/Margin/Margin/HBox"]
offset_left = 209.0
offset_right = 252.0
offset_bottom = 30.0
text = "Load"

[node name="Reload" type="Button" parent="VBox/Margin/Margin/HBox"]
visible = false
offset_left = 197.0
offset_right = 252.0
offset_bottom = 30.0
text = "Reload"

[node name="New" type="Button" parent="VBox/Margin/Margin/HBox"]
offset_left = 256.0
offset_right = 368.0
offset_bottom = 30.0
text = "New From Image"

[node name="Save" type="FileDialog" parent="."]
offset_right = 400.0
offset_bottom = 288.0
custom_minimum_size = Vector2( 400, 140 )
filters = PackedStringArray( "*.tres" )

[node name="Load" type="FileDialog" parent="."]
offset_right = 400.0
offset_bottom = 288.0
custom_minimum_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
filters = PackedStringArray( "*.tres" )

[node name="New" type="FileDialog" parent="."]
offset_right = 400.0
offset_bottom = 288.0
custom_minimum_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
filters = PackedStringArray( "*.jpg", "*.bmp", "*.png" )

[connection signal="tab_changed" from="VBox/Margin/Tab" to="." method="on_tab_changed"]
[connection signal="toggled" from="VBox/Margin/Tab/Collision/HBox/FlipH" to="." method="_on_FlipH_toggled"]
[connection signal="toggled" from="VBox/Margin/Tab/Collision/HBox/FlipV" to="." method="_on_FlipV_toggled"]
[connection signal="toggled" from="VBox/Margin/Tab/Collision/HBox/RotateC" to="." method="_on_RotateC_toggled"]
[connection signal="toggled" from="VBox/Margin/Tab/Collision/HBox/RotateCC" to="." method="_on_RotateCC_toggled"]
[connection signal="toggled" from="VBox/Margin/Tab/Collision/HBox/OneWay" to="." method="_on_OneWay_toggled"]
[connection signal="pressed" from="VBox/Margin/Margin/HBox/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBox/Margin/Margin/HBox/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBox/Margin/Margin/HBox/Reload" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="VBox/Margin/Margin/HBox/New" to="." method="_on_New_pressed"]
[connection signal="confirmed" from="Save" to="." method="_on_Save_confirmed"]
[connection signal="file_selected" from="Load" to="." method="_on_Load_file_selected"]
[connection signal="file_selected" from="New" to="." method="_on_New_file_selected"]
